--- a/SMS.Web/Views/BringIn/Create.cshtml
+++ b/SMS.Web/Views/BringIn/Create.cshtml
@@ -119,7 +119,8 @@
                         </td>
                         <td class="input-group-sm">
                             <select id="return" class="form-control input-previous-button isReturn">
-                                <option value="true" selected>Có</option>
+                                <option>--Chọn--</option>
+                                <option value="true">Có</option>
                                 <option value="false">Không</option>
                             </select>
                         </td>
@@ -179,6 +180,7 @@
                                     </td>
                                     <td class="input-group-sm">
                                         <select class="form-control input-previous-button isReturn">
+                                            <option>--Chọn--</option>
                                             <option value="true" selected>Có</option>
                                             <option value="false">Không</option>
                                         </select>
