--- a/SMS.Web/Views/Guard/Queue.cshtml
+++ b/SMS.Web/Views/Guard/Queue.cshtml
@@ -94,12 +94,12 @@
                     @foreach (var item in ViewBag.LeaveEarlies)
                     {
                         <tr>
-                            <td><span>RLE</span><span>@item.ID</span><span>@item.Team</span></td>
+                            <td><span>@item.ID</span><span>@item.Team</span></td>
                             <td><a href="/Guard/ConfirmLE/@item.ID" style="text-decoration:none">@item.FullName</a></td>
                             <td>@item.Position</td>
                             <td>@item.Team</td>
                             <td>@item.Reason</td>
-                            <td>@item.EstimatedDate | @item.EstimatedTime</td>
+                            <td>@item.EstimatedDate  @item.EstimatedTime</td>
                             <td>
                                 <a href="/LeaveEarly/LEReport/@item.ID" target="_blank" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
@@ -146,13 +146,13 @@
                     @foreach (var item in ViewBag.GoOuts)
                     {
                         <tr>
-                            <td><span>RGO</span><span>@item.ID</span><span>@item.Team</span></td>
+                            <td><span>@item.ID</span><span>@item.Team</span></td>
                             <td><a href="/Guard/ConfirmGO/@item.ID" style="text-decoration:none">@item.FullName</a></td>
                             <td>@item.Position</td>
                             <td>@item.Team</td>
                             <td>@item.Reason</td>
-                            <td>@item.EstimatedDateOut | @item.EstimatedTimeOut</td>
-                            <td>@item.EstimatedDateReturn | @item.EstimatedTimeReturn</td>
+                            <td>@item.EstimatedDateOut  @item.EstimatedTimeOut</td>
+                            <td>@item.EstimatedDateReturn  @item.EstimatedTimeReturn</td>
                             <td>
                                 <a href="/GoOut/GOReport/@item.ID" target="_blank" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
@@ -195,30 +195,17 @@
                         <th>
                             @Html.DisplayName("Thời gian dự kiến")
                         </th>
-                        <th>
-                            @Html.DisplayName("Trạng thái")
-                        </th>
                         <th>In ấn</th>
                     </tr>
                     @foreach (var item in ViewBag.BringIns)
                     {
                         <tr>
-                            <td><span>RBI</span><span>@item.ID</span><span>@item.Team</span></td>
+                            <td><span>@item.ID</span><span>@item.Team</span></td>
                             <td><a href="/Guard/ConfirmBringIn/@item.ID" style="text-decoration:none">@item.FullName</a></td>
                             <td>@item.Position</td>
                             <td>@item.Team</td>
                             <td>@item.Reason</td>
-                            <td>@item.EstimatedDate | @item.EstimatedTime</td>
-                            <td>
-                                @if (@item.Status)
-                                {
-                                    <span>Đã thực hiện</span>
-                                }
-                                else
-                                {
-                                    <span>Chưa thực hiện</span>
-                                }
-                            </td>
+                            <td>@item.EstimatedDate  @item.EstimatedTime</td>
                             <td>
                                 <a href="/BringIn/BIReport/@item.ID" target="_blank" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
@@ -257,30 +244,17 @@
                         <th>
                             @Html.DisplayName("Thời gian dự kiến")
                         </th>
-                        <th>
-                            @Html.DisplayName("Trạng thái")
-                        </th>
                         <th>In ấn</th>
                     </tr>
                     @foreach (var item in ViewBag.BringOuts)
                     {
                         <tr>
-                            <td><span>RBO</span><span>@item.ID</span><span>@item.Team</span></td>
+                            <td><span>@item.ID</span><span>@item.Team</span></td>
                             <td><a href="/Guard/ConfirmBringOut/@item.ID" style="text-decoration:none">@item.FullName</a></td>
                             <td>@item.Position</td>
                             <td>@item.Team</td>
                             <td>@item.Reason</td>
-                            <td>@item.EstimatedDate | @item.EstimatedTime</td>
-                            <td>
-                                @if (@item.Status)
-                                {
-                                    <span>Đã thực hiện</span>
-                                }
-                                else
-                                {
-                                    <span>Chưa thực hiện</span>
-                                }
-                            </td>
+                            <td>@item.EstimatedDate  @item.EstimatedTime</td>
                             <td>
                                 <a href="/BringOut/BOReport/@item.ID" target="_blank" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
@@ -318,9 +292,6 @@
                             @Html.DisplayName("Tên khách")
                         </th>
                         <th>
-                            @Html.DisplayName("CMND/CCCD")
-                        </th>
-                        <th>
                             @Html.DisplayName("Số người")
                         </th>
                         <th>
@@ -338,15 +309,12 @@
                         <th>
                             @Html.DisplayName("Phòng ban")
                         </th>
-                        <th>
-                            @Html.DisplayName("Vị trí")
-                        </th>
                         <th>In ấn</th>
                     </tr>
                     @foreach (var item in ViewBag.GuestNoItems)
                     {
                         <tr>
-                            <td>@item.EstimatedDateIn | @item.EstimatedTimeIn</td>
+                            <td>@item.EstimatedDateIn  @item.EstimatedTimeIn</td>
                             <td>
                                 @if (item.Type == 0)
                                 {
@@ -363,7 +331,6 @@
                             </td>
                             <td>@item.Company</td>
                             <td><a href="/Guard/ConfirmGuest/@item.ID" style="text-decoration:none">@item.FullName</a></td>
-                            <td>@item.IDCard</td>
                             <td>@item.NumbersOfPerson</td>
                             <td>@item.Purpose</td>
                             <td>@item.TransportNo</td>
@@ -371,7 +338,6 @@
                             <td>@item.EmployeeID</td>
                             <td>@item.EmployeeName</td>
                             <td>@item.Team</td>
-                            <td>@item.Position</td>
                             <td>
                                 <a href="/Guest/GuestReport/@item.ID" target="_blank" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
@@ -434,7 +400,7 @@
                     @foreach (var item in ViewBag.GuestHasItems)
                     {
                         <tr>
-                            <td>@item.EstimatedDateIn | @item.EstimatedTimeIn</td>
+                            <td>@item.EstimatedDateIn  @item.EstimatedTimeIn</td>
                             <td>
                                 @if (item.Type == 0)
                                 {
@@ -525,7 +491,7 @@
                     @foreach (var item in ViewBag.ForeignGuestNoItems)
                     {
                         <tr>
-                            <td>@item.EstimatedDateIn | @item.EstimatedTimeIn</td>
+                            <td>@item.EstimatedDateIn  @item.EstimatedTimeIn</td>
                             <td>
                                 @if (item.Type == 0)
                                 {
@@ -614,7 +580,7 @@
                     @foreach (var item in ViewBag.ForeignGuestHasItems)
                     {
                         <tr>
-                            <td>@item.EstimatedDateIn | @item.EstimatedTimeIn</td>
+                            <td>@item.EstimatedDateIn  @item.EstimatedTimeIn</td>
                             <td>
                                 @if (item.Type == 0)
                                 {
