--- a/SMS.Web/Views/Guest/FSTApproveDetail.cshtml
+++ b/SMS.Web/Views/Guest/FSTApproveDetail.cshtml
@@ -201,7 +201,7 @@
                     <th>Đơn vị</th>
                     <th>Loại hàng hóa</th>
                     <th colspan="2">Thời gian đem trở ra</th>
-                    <th colspan="4">ITT/SMT phê duyệt</th>
+                    <th colspan="4">SMT phê duyệt</th>
                     <th colspan="4">FST phê duyệt</th>
                 </tr>
             </thead>
@@ -315,7 +315,7 @@
                             </td>
                             <td>@item.FST</td>
                             <td>@item.FST_Date</td>
-                            <td><input class="remark col-12" type="text" placeholder="Ghi chú..." /></td>
+                            <td><input class="remark col-12 remark-1" type="text" placeholder="Ghi chú..." /></td>
                         }
                         else
                         {
