--- a/SMS.Web/Views/Guest/ITTApproveDetail.cshtml
+++ b/SMS.Web/Views/Guest/ITTApproveDetail.cshtml
@@ -18,7 +18,7 @@
 
 <div class="form-horizontal">
     <div class="card-header">
-        <h5 class="m-0 font-weight-bold text-primary">PHÒNG ITT & SMT PHÊ DUYỆT KHÁCH MANG HÀNG VÀO RA</h5>
+        <h5 class="m-0 font-weight-bold text-primary">PHÒNG SMT PHÊ DUYỆT KHÁCH MANG HÀNG VÀO RA</h5>
     </div>
     <!--Cột bên trái dành cho form đăng ký-->
     <div class="col-md-12 row-form">
@@ -209,7 +209,7 @@
                     <th>Đơn vị</th>
                     <th>Loại hàng hóa</th>
                     <th colspan="2">Thời gian đem trở ra</th>
-                    <th colspan="4">ITT/SMT phê duyệt</th>
+                    <th colspan="4">SMT phê duyệt</th>
                     <th colspan="4">FST phê duyệt</th>
                 </tr>
             </thead>
