--- a/SMS.Web/Views/BringIn/Detail.cshtml
+++ b/SMS.Web/Views/BringIn/Detail.cshtml
@@ -96,7 +96,7 @@
                         <th>Mang trở ra <span class="red">(*)</span></th>
                         <th>Thời gian trở ra</th>
                         <th colspan="4">TM Phê duyệt</th>
-                        <th colspan="4">ITT/SMT phê duyệt</th>
+                        <th colspan="4">SMT phê duyệt</th>
                         <th colspan="4">FST phê duyệt</th>
                     </tr>
                 </thead>
