--- a/SMS.Web/Views/Guard/ConfirmBringOut.cshtml
+++ b/SMS.Web/Views/Guard/ConfirmBringOut.cshtml
@@ -86,7 +86,6 @@
                     <th>Loại hàng</th>
                     <th colspan="2">Mang trở lại</th>
                     <th colspan="4">TM phê duyệt</th>
-                    <th colspan="4">ITT phê duyệt</th>
                     <th colspan="4">SMT phê duyệt</th>
                     <th colspan="4">FST phê duyệt</th>
                     <th colspan="4">Bảo vệ xác nhận mang ra</th>
@@ -125,7 +124,7 @@
                                 <i class="fas fa-times" style="color: red"></i>
                             }
                         </td>
-                        <td>@item.ReturnTime</td>
+                        <td>@item.ReturnDate @item.ReturnTime</td>
                         <td>@item.ApprovedBy</td>
                         <td>
                             @if (item.ApprovedStatus == 1)
@@ -152,19 +151,19 @@
                         </td>
                         <td>@item.ITT_Remark</td>
                         <td>@item.ITT_Date</td>
-                        <td>@item.SMT</td>
-                        <td>
-                            @if (item.SMT_Status == 1)
-                            {
-                                <i class="fas fa-check-square"></i>
-                            }
-                            else if (item.SMT_Status == 0)
-                            {
-                                <i class="fas fa-times" style="color: red"></i>
-                            }
-                        </td>
-                        <td>@item.SMT_Remark</td>
-                        <td>@item.SMT_Date</td>
+                        @*<td>@item.SMT</td>
+                            <td>
+                                @if (item.SMT_Status == 1)
+                                {
+                                    <i class="fas fa-check-square"></i>
+                                }
+                                else if (item.SMT_Status == 0)
+                                {
+                                    <i class="fas fa-times" style="color: red"></i>
+                                }
+                            </td>
+                            <td>@item.SMT_Remark</td>
+                            <td>@item.SMT_Date</td>*@
                         <td>@item.FST</td>
                         <td>
                             @if (item.FST_Status == 1)
@@ -205,33 +204,43 @@
                             }
                         </td>
                         <td>@item.GuardDateOut</td>
-                        <td>@item.GuardReturn</td>
-                        <td>
-                            @if (@item.GuardStatusReturn == null)
-                            {
-                                <a data-id="" class="btn btn-primary btn-standard btn-admin-approve-LE" href="#" title="Phê duyệt" onclick="handleApproveReturn(@item.ID)"><i class="fas fa-check" style="margin-left: -4px"></i></a>
-                                <a data-id="" class="btn btn-danger btn-standard btn-admin-reject-LE" href="#" title="Không phê duyệt" onclick="handleUnapproveReturn(@item.ID)"><i class="fas fa-times" style="margin-left: -2.5px"></i></a>
-                            }
-                            else if (@item.GuardStatusReturn == 1)
-                            {
-                                <i class="fas fa-check-square"></i>
-                            }
-                            else
-                            {
-                                <i class="fas fa-times" style="color:red"></i>
-                            }
-                        </td>
-                        <td>
-                            @if (item.GuardReturn == null)
-                            {
-                                <input class="remark-@item.ID-return remark col-12" type="text" placeholder="Ghi chú..." value="@item.GuardRemarkReturn" />
-                            }
-                            else
-                            {
-                                <span>@item.GuardRemarkReturn</span>
-                            }
-                        </td>
-                        <td>@item.GuardDateReturn</td>
+                        @if (item.IsReturn == true && item.GuardStatusOut == 1)
+                        {
+                            <td>@item.GuardReturn</td>
+                            <td>
+                                @if (@item.GuardStatusReturn == null)
+                                {
+                                    <a data-id="" class="btn btn-primary btn-standard btn-admin-approve-LE" href="#" title="Phê duyệt" onclick="handleApproveReturn(@item.ID)"><i class="fas fa-check" style="margin-left: -4px"></i></a>
+                                    <a data-id="" class="btn btn-danger btn-standard btn-admin-reject-LE" href="#" title="Không phê duyệt" onclick="handleUnapproveReturn(@item.ID)"><i class="fas fa-times" style="margin-left: -2.5px"></i></a>
+                                }
+                                else if (@item.GuardStatusReturn == 1)
+                                {
+                                    <i class="fas fa-check-square"></i>
+                                }
+                                else
+                                {
+                                    <i class="fas fa-times" style="color:red"></i>
+                                }
+                            </td>
+                            <td>
+                                @if (item.GuardReturn == null)
+                                {
+                                    <input class="remark-@item.ID-return remark col-12 remark-1" type="text" placeholder="Ghi chú..." value="@item.GuardRemarkReturn" />
+                                }
+                                else
+                                {
+                                    <span>@item.GuardRemarkReturn</span>
+                                }
+                            </td>
+                            <td>@item.GuardDateReturn</td>
+                        }
+                        else
+                        {
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        }
                     </tr>
                 }
             </tbody>
