--- a/SMS.Web/Views/Guest/Create.cshtml
+++ b/SMS.Web/Views/Guest/Create.cshtml
@@ -236,7 +236,8 @@
                             </td>
                             <td class="input-group-sm">
                                 <select class="form-control input-previous-button isReturn">
-                                    <option value="true" selected>Có</option>
+                                    <option>--Chọn--</option>
+                                    <option value="true">Có</option>
                                     <option value="false">Không</option>
                                 </select>
                             </td>
